--- a/index.html
+++ b/index.html
@@ -3,11 +3,67 @@
 
 <head>
     <meta charset=utf-8/>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>hw-02</title>
 </head>
 
 
 <body>
+    <div id="data-abstraction">
+        <div class="info">
+            <h2>Dataset Types</h1>
+            <table>
+                <tr>
+                  <th>Data</th>
+                  <th>Link</th>
+                  <th>Dataset Type</th>
+                </tr>
+                <tr>
+                  <td>Airports.csv</td>
+                  <td>TEMPLATE</td>
+                  <td>Airport positions - latitude and longitude</td>
+                </tr>
+                <tr>
+                  <td>Google-web.txt</td>
+                  <td>TEMPLATE</td>
+                  <td>Directed Graph of nodes</td>
+                </tr>
+                <tr>
+                    <td>UFO.csv</td>
+                    <td>TEMPLATE</td>
+                    <td>UFO sitings - location and duration</td>
+                  </tr>
+            </table>
+        </div>
 
+        <div class="info">
+            <h2>Data Types</h2>
+            <h4>Airports</h4>
+                <ul>
+                    <li>Airport Name: String</li>
+                    <li>Latitude: List[integers]</li>
+                    <li>Longitude: List[integers]</li>
+                </ul>
+            <h4>Google-Web</h4>
+                <ul>
+                    <li>Airport Name: String</li>
+                    <li>Latitude: List[integers]</li>
+                </ul>
+            <h4>UFO</h4>
+                <ul>
+                    <li>Datetime: DateTime object</li>
+                    <li>City: String</li>
+                    <li>State: String</li>
+                    <li>Country: String</li>
+                    <li>Shape: String</li>
+                    <li>Duration: integer</li>
+                </ul>
+        </div>
+
+        </div>
+        <p id="p1">This is the DOM for this webpage:</p>
+        <img src="DOM.png"  style="width:500px;height:300px;" alt="DOM">
+      </div>
 
 </body>
 
