made css flexbox
still have to identify high low and medium + center on column?

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="data-abstraction">
         <div class="info">
-            <h2>Dataset Types</h1>
+            <h2>Dataset Types</h2>
             <table>
                 <tr>
                   <th>Data</th>
@@ -65,6 +65,17 @@
         <img src="DOM.png"  style="width:500px;height:300px;" alt="DOM">
       </div>
 
+      <div id="task-abstraction"> 
+        <h2>Task Absraction</h2>
+        <div class="container">
+            <div class="left-column">Column 1
+                <img src="https://github.com/DS4200-S23-Class/hw-02-siraj-and-vivek/blob/master/img/vis1.png?raw=true" alt="vis1">
+            </div>
+            <div class="right-column">Column 2
+                <img src="https://github.com/DS4200-S23-Class/hw-02-siraj-and-vivek/blob/master/img/vis2.png?raw=true" alt="vis1">
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
