--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
             </div>
         </div>
     </div>
+    <div id="decoration">
+      <svg width="200" height="200">
+        <circle cx="20" cy="20" r="10" fill="purple" opacity="0.5" />
+        <rect x="50" y="10" width="30" height="30" fill="blue" stroke="black" stroke-width="5" />
+        <circle cx="90" cy="20" r="10" fill="purple" opacity="0.5" />
+        <rect x="120" y="10" width="30" height="30" fill="blue" stroke="black" stroke-width="5" />
+        </svg>
+    </div>
 </body>
 
 </html>
