--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
       <div id="task-abstraction"> 
         <h2>Task Absraction</h2>
         <div class="container">
-            <div class="left-column">Vis1
+            <div class="left-column">Visualization 1
                 <img src="https://github.com/DS4200-S23-Class/hw-02-siraj-and-vivek/blob/master/img/vis1.png?raw=true" alt="vis1">
                 <p class="text"> The High level is present, showing the daily max temperatures across several years. The medium level is lookup because the target of the last 3 days is known and the location is known. The low level is identify, hihglighting specific data points. 
                 </p>
             </div>
-            <div class="right-column">Vis2
+            <div class="right-column">Visualization 2
                 <img src="https://github.com/DS4200-S23-Class/hw-02-siraj-and-vivek/blob/master/img/vis2.png?raw=true" alt="vis1">
                 <p class="text"> The High level is present, showing specific metrics for the two cities. The medium level is lookup because the target and location of the two cities are known. The low level is compare. 
                 </p>
@@ -82,10 +82,10 @@
     </div>
     <div id="decoration">
       <svg width="200" height="200">
-        <circle cx="20" cy="20" r="10" fill="purple" opacity="0.5" />
-        <rect x="50" y="10" width="30" height="30" fill="blue" stroke="black" stroke-width="5" />
-        <circle cx="90" cy="20" r="10" fill="purple" opacity="0.5" />
-        <rect x="120" y="10" width="30" height="30" fill="blue" stroke="black" stroke-width="5" />
+        <circle class="shape" cx="20" cy="20" r="10" fill="purple" opacity="0.5" />
+        <rect class="shape" x="50" y="10" width="30" height="30" fill="blue" stroke="black" stroke-width="5"/>
+        <circle class="shape" cx="90" cy="20" r="10" fill="purple" opacity="0.5" />
+        <rect class="shape" x="120" y="10" width="30" height="30" fill="blue" stroke="black" stroke-width="5" />
         </svg>
     </div>
     <div>
