centered the shapes

--- a/index.html
+++ b/index.html
@@ -20,17 +20,23 @@
                 </tr>
                 <tr>
                   <td>Airports.csv</td>
-                  <td>TEMPLATE</td>
+                  <td>
+                    <a href="https://github.com/DS4200-S23-Class/hw-02-siraj-and-vivek/blob/master/data/Airports.csv">Airport Data Link</a>
+                  </td>
                   <td>Airport positions - latitude and longitude</td>
                 </tr>
                 <tr>
                   <td>Google-web.txt</td>
-                  <td>TEMPLATE</td>
+                  <td>
+                    <a href="https://github.com/DS4200-S23-Class/hw-02-siraj-and-vivek/blob/master/data/Google-Web.txt"> Google Data Link</a>
+                  </td>
                   <td>Directed Graph of nodes</td>
                 </tr>
                 <tr>
                     <td>UFO.csv</td>
-                    <td>TEMPLATE</td>
+                    <td>
+                    <a href="https://github.com/DS4200-S23-Class/hw-02-siraj-and-vivek/blob/master/data/UFO.csv"> UFO Data Link</a>
+                  </td>
                     <td>UFO sitings - location and duration</td>
                   </tr>
             </table>
@@ -80,13 +86,37 @@
             </div>
         </div>
     </div>
-    <div id="decoration">
-      <svg width="200" height="200">
-        <circle class="shape" cx="20" cy="20" r="10" fill="purple" opacity="0.5" />
-        <rect class="shape" x="50" y="10" width="30" height="30" fill="blue" stroke="black" stroke-width="5"/>
-        <circle class="shape" cx="90" cy="20" r="10" fill="purple" opacity="0.5" />
-        <rect class="shape" x="120" y="10" width="30" height="30" fill="blue" stroke="black" stroke-width="5" />
-        </svg>
+    <div class="decoration">
+        <div class="shape">
+            <svg height= 60 width=60>
+                <circle cx="30" cy="30" r="30" fill="purple" opacity="0.5" />
+            </svg>
+        </div>
+        <div class="shape">
+            <svg height= 60 width=60>
+                <rect width="60" height="60" fill="blue" stroke="black" stroke-width="5"/>
+            </svg>
+        </div>
+        <div class="shape">
+            <svg height= 60 width=60>
+                <circle cx="30" cy="30" r="30" fill="purple" opacity="0.5" />
+            </svg>
+        </div>
+        <div class="shape">
+            <svg height= 60 width=60>
+                <rect width="60" height="60" fill="blue" stroke="black" stroke-width="5"/>
+            </svg>
+        </div>
+        <div class="shape">
+            <svg height= 60 width=60>
+                <circle cx="30" cy="30" r="30" fill="purple" opacity="0.5" />
+            </svg>
+        </div>
+        <div class="shape">
+            <svg height= 60 width=60>
+                <rect width="60" height="60" fill="blue" stroke="black" stroke-width="5"/>
+            </svg>
+        </div>
     </div>
     <div>
         <h3>Acknowledgements</h3>
